--- a/EECIP/Views/Forum/EditPost.cshtml
+++ b/EECIP/Views/Forum/EditPost.cshtml
@@ -13,7 +13,6 @@
                 @Html.ValidationSummary(false)
                 @Html.AntiForgeryToken()
                 @Html.Partial("CreateEdit_TopicPost", Model)
-
             }
 
         </div>
@@ -22,21 +21,72 @@
 </div>
 
 
-
 @section Scripts {
     @Scripts.Render("~/bundles/select2")
-<script type="text/javascript">
-    $(document).ready(function () {
 
-        //function to initiate Select2
-        $(".search-select").select2({
-            placeholder: "",
-            allowClear: true,
-            tags: true,
-            width: ''
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var counter = @(Model.PollAnswers != null ? Model.PollAnswers.Count : 0);
+
+            //function to initiate Select2
+            $(".search-select").select2({
+                placeholder: "",
+                allowClear: true,
+                tags: true,
+                width: ''
+            });
+            
+
+            // Remove the polls
+            $(".removepollbutton").click(function (e) {
+                e.preventDefault();
+                //Hide the Poll Section
+                $('.pollanswerholder').hide();
+                $('.pollanswerlist').html("");
+                // Hide this button now
+                $(this).hide();
+                // Show the add poll button
+                $(".createpollbutton").show();
+                counter = 0;
+            });
+
+            // Create Polls
+            $(".createpollbutton").click(function (e) {
+                e.preventDefault();
+                //Firstly Show the Poll Section
+                $('.pollanswerholder').show();
+                // Now add in the first row
+                AddNewPollAnswer(counter);
+                counter++;
+                // Hide this button now
+                $(this).hide();
+                // Show the remove poll button
+                $(".removepollbutton").show();
+            });
+
+            // Add a new answer
+            $(".addanswer").click(function (e) {
+                e.preventDefault();
+                AddNewPollAnswer(counter);
+                counter++;
+            });
+
+            // Remove a poll answer
+            $(".removeanswer").click(function (e) {
+                e.preventDefault();
+                if (counter > 0) {
+                    counter--;
+                    $("#answer" + counter).remove();
+                }
+            });
         });
 
-    });
-
-</script>
+        function AddNewPollAnswer(counter) {
+            var placeHolder = $('#pollanswerplaceholder').val();
+            var liHolder = $(document.createElement('li')).attr("id", 'answer' + counter);
+            liHolder.html('<input type="text" name="PollAnswers[' + counter + '].Answer" id="PollAnswers_' + counter + '_Answer" class="form-control" value="" placeholder="' + placeHolder + '" />');
+            liHolder.appendTo(".pollanswerlist");
+        }
+    </script>
     }
